Removed the logic JS file

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <script type="text/javascript" src="../GreenSock-JS-master/src/minified/TweenLite.min.js"></script>
     <script type="text/javascript" src="../GreenSock-JS-master/src/minified/plugins/CSSPlugin.min.js"></script> 
     <script type="text/javascript" src="../GreenSock-JS-master/src/minified/plugins/AttrPlugin.min.js"></script>   -->
-    <script src="logic.js"></script>
+    <!--script src="logic.js"></script -->
     <script type="text/javascript" src="js/animations.js"></script>
     <script type="text/javascript">window.onload=runAnimation;</script>
 </body>
